--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -2,5 +2,8 @@
   command = "npm run build"
   publish = ".next"
 
+[build.environment]
+  STRAPI_API_URL = "toheed-portfolio-production.up.railway.app"
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
